--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
-	"name": "Ankai Jie Personal Website",
+	"name": "Ankai-Jie-Personal-Website",
 	"version": "1.0.0",
 	"dependencies": {
 		"jquery": "^3.1.0",
 		"backbone": "^1.3.3",
 		"lodash": "^4.15.0",
 		"underscore": "^1.8.3",
-		"requirejs": "^2.1.3"
+		"requirejs": "^2.1.3",
+		"d3": "^4.2.2"
 	}
 }
