--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "requirejs": "^2.1.3",
     "d3": "^4.2.2",
     "text": "requirejs-text#^2.0.15",
-    "bootstrap-css": "^3.3.6"
+    "bootstrap-css": "^3.3.6",
+    "font-awesome": "^4.6.3"
   }
 }
