--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Gruntfile.js",
   "devDependencies": {
     "express": "^4.14.0",
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.2",
     "grunt-browser-sync": "^2.2.0",
     "grunt-concurrent": "^2.3.1",
     "grunt-contrib-jshint": "^1.0.0",
@@ -27,5 +27,9 @@
   "bugs": {
     "url": "https://github.com/AnkaiJie/ajie.com/issues"
   },
-  "homepage": "https://github.com/AnkaiJie/ajie.com#readme"
+  "homepage": "https://github.com/AnkaiJie/ajie.com#readme",
+  "dependencies": {
+    "bower": "^1.8.2",
+    "grunt-cli": "^1.2.0"
+  }
 }
